--- a/index.html
+++ b/index.html
@@ -37,22 +37,18 @@
           <img src="images/mugi-3.svg" class="shake" style="height: 100%; margin-left: 5%;">
           <img src="images/hello.svg" style="height: 50%; transform: rotateZ(-10deg); margin-left: -8%;">
         </div>
-        <div style="height: 20%;">
-        
+        <ul class="navigation-list" style="border-bottom: 2px solid #48575e;">
+          <li><a href="#top" class="navigation-link" style="color: inherit; background-color: inherit;">Top</a></li>
+          <li><a href="#about" class="navigation-link" style="color: inherit; background-color: inherit;">About us ------ムギックスについて</a></li>
+          <li><a href="#workflow" class="navigation-link" style="color: inherit; background-color: inherit;">Workflow ------完成までの流れ</a></li>
+          <li><a href="#prices" class="navigation-link" style="color: inherit; background-color: inherit;">Menu ------料金プラン</a></li>
+        </ul>
+        <div style="height: 20%; border-bottom: 2px solid #48575e;">
         </div>
-        <ul class="navigation-list" style="height: 10%;">
+        <ul class="navigation-list">
+          <li><a href="#contact" class="navigation-link">お問い合わせはこちらから</a></li>
           <li><a href="privacy_policy.html" class="navigation-link">プライバシーポリシー</a></li>
         </ul>
-        <div style="width: 70%; height: 40%;">
-          <div>
-            お問い合わせはこちらから<br>
-            LINE MUGIX公式アカウント
-          </div>
-          <a href="https://lin.ee/QZJ1BCv">
-            <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" style="height: 10%; margin: 12px 0; border-radius: 24px; display: block;">
-          </a>
-          <img src="https://qr-official.line.me/gs/M_713uwqqm_GW.png?oat_content=qr" style="margin-right: 50%; height: 50%; max-width: 200px; border-radius: 8px;">
-        </div>
       </div>
     </nav>
   </header>
@@ -62,25 +58,26 @@
   <!-- side-menu -->
   <div class="side-menu is-disappear">
     <div class="navi-container">
-      <div class="area-horizon" style="height: 30%;">
+      <div class="area-horizon" style="height: 20%;">
         <img src="images/mugi-3.svg" class="shake" style="height: 100%; margin-left: 5%;">
         <img src="images/hello.svg" style="height: 50%; transform: rotateZ(-10deg); margin-left: -8%;">
       </div>
-      <ul class="navigation-list" style="height: 30%; border-bottom: 2px solid #48575e;">
-        <li><a href="#top" class="side-navigation-link">Top</a></li>
-        <li><a href="#about" class="side-navigation-link">About us ------ムギックスについて</a></li>
-        <li><a href="#workflow" class="side-navigation-link">Workflow ------完成までの流れ</a></li>
-        <li><a href="#prices" class="side-navigation-link">Menu ------料金プラン</a></li>
-        <li><a href="#contact" class="side-navigation-link">Contact ------お問い合わせ</a></li>
+      <ul class="navigation-list" style="border-bottom: 2px solid #48575e;">
+        <li><a href="#top" class="side-navigation-link" style="color: inherit; background-color: inherit;">Top</a></li>
+        <li><a href="#about" class="side-navigation-link" style="color: inherit; background-color: inherit;">About us ------ムギックスについて</a></li>
+        <li><a href="#workflow" class="side-navigation-link" style="color: inherit; background-color: inherit;">Workflow ------完成までの流れ</a></li>
+        <li><a href="#prices" class="side-navigation-link" style="color: inherit; background-color: inherit;">Menu ------料金プラン</a></li>
+        <li><a href="#contact" class="side-navigation-link" style="color: inherit; background-color: inherit;">Contact ------お問い合わせ</a></li>
       </ul>
-      <div style="height: 30%;">
+      <div style="height: 20%; border-bottom: 2px solid #48575e;">
       
       </div>
-      <div style="height: 10%; text-align: right;">
-        <a href="privacy_policy.html" style="text-decoration: none; color: #48575e;"><span>プライバシーポリシー</span></a>
-      </div>
+      <ul class="navigation-list">
+        <li><a href="#contact" class="side-navigation-link">お問い合わせはこちらから</a></li>
+        <li><a href="privacy_policy.html" class="navigation-link">プライバシーポリシー</a></li>
+      </ul>
     </div>
-</div>
+  </div>
   <div class="container media-container">
     <!-- climber -->
     <div class="rope">
@@ -100,8 +97,10 @@
       <img src="images/kirin.svg" class="inview-kirin" style="width: 40%; position: absolute; bottom: -20%; left: -50%;">
     </div>
     <div class="area" style="margin-bottom: 4px;">
-      <h1 class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 1.8; font-size: 1.2em;">いらっしゃいませ！<br>
-        ここはMUGIX DESIGNでございます<br><br>ホームページ制作のことならお任せください<br>
+      <h1 class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 1.8; font-size: 1.2em;">
+        いらっしゃいませ！<br>
+        ここはMUGIX DESIGNでございます<br><br>
+        ホームページ制作、ウェブアプリケーション制作、その他ウェブ関連のクリエーションを行っています<br>
       </h1>
     </div>
     <div class="area-horizon" style="margin-left: 10%;"">
@@ -111,12 +110,15 @@
       </div>
       <div class="mugi-selif" style="width: 30%;"></div>
     </div>
-    <div class="area" id="background-color-on" style="margin-bottom: 24px; height: 600px;">
-      <div class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 2; ">
-        このサイトは制作のご案内やお問い合わせと同時に、実例の見本にもなっております<br>
-        お客様のプランのご参考にいかがでしょうか？<br>なお、クリックのできるところがいくつかございます<br>
+    <div class="area" id="background-color-on" style="margin-bottom: 200px;">
+      <div class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 1.8; ">
+        このサイトはポップで楽しめるサイトをコンセプトに制作しています<br>
+        制作のご案内やお問い合わせと同時に、実例の見本にもなっております。お客様のプランのご参考にいかがでしょうか？<br>
+        もちろん落ち着いた雰囲気の大人なデザインなども得意です<br>
+        ホームページの制作を検討しているなら、ぜひご相談ください<br>
+        <div style="text-align: right; margin: 8px 0;"><a href="#contact" class="button">お問い合わせ</a></div>
+        なお、クリックのできるところがいくつかございます<br>
         どうぞごゆっくりお楽しみ下さい
-        <div style="text-align: right; margin-top: 8px;"><a href="#contact" class="button">お問い合わせ</a></div>
       </div>
       <img src="images/bg-title.svg" class="palette-re" style="animation: rotate-anim 15s linear infinite reverse; pointer-events: none;">
       <div class="palette" style="animation: rotate-anim 20s linear infinite;">
@@ -129,16 +131,16 @@
       </div>
     </div>
     <div class="news">
-      <div style="margin-left: 24px; font-size: 1.2em; color: #eb5e30;">新着情報</div>
+      <div style="margin-left: 24px; font-size: 1.2em; color: #eb5e30;">最新情報</div>
       <div>
         料金プランの改定を行いました！<br>
         「テンプレート」「テンプレートCMS」「オリジナル」の3種類のプランでより分かりやすくしました
       </div>
     </div>
     <!-- about_us -->
-    <div id="about" class="area" style="margin-bottom: 24px; margin-top: 64px;">
+    <div id="about" class="area" style="margin-bottom: 24px; margin-top: -64px; padding-top: 64px;">
       <img src="images/about-us3.svg" class="is-disappear subtitle" id="about-us">
-      <img src="images/rakko.svg" class="inview-rakko" style="width: 50%; position: absolute; top: -60px; left: -50%;">
+      <img src="images/rakko.svg" class="inview-rakko" style="width: 50%; position: absolute; bottom: 0; left: -50%;">
       <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜ムギックスについて〜</p>
     </div>
     <img src="images/bee.svg" id="bee" style="width: 25%; position: absolute; z-index: 10; top: -300px;">
@@ -185,7 +187,7 @@
       </div>
     </div>
     <!-- workflow -->
-    <div id="workflow" class="area" style="margin-bottom: 24px; margin-top: 64px;">
+    <div id="workflow" class="area" style="margin-bottom: 24px; margin-top: -64px; padding-top: 64px;">
       <div class="bird-slider">
         <img src="images/bird.svg" style="position: absolute; width: 80%; top: 50%; left: 50%; z-index: 35;">
       </div>
@@ -301,8 +303,8 @@
       </div>
     </div>
     <!-- prices -->
-    <div id="prices" class="area" style="margin-bottom: 24px; margin-top: 64px;">
-      <img src="images/shoebill.svg" class="inview-appear is-disappear" style="position: absolute; bottom: 0; right: 10%; width: 20%;">
+    <div id="prices" class="area" style="margin-bottom: 24px; margin-top: -64px; padding-top: 64px;">
+      <img src="images/shoebill.svg" class="inview-appear is-disappear" style="position: absolute; bottom: 0; right: 20%; width: 15%;">
       <img src="images/menu2.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
       <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜メニュー〜</p>
     </div>
@@ -316,14 +318,7 @@
       BASIC PLAN
     </div>
     <div class="plan-slider">
-      <div class="plan">
-        <img src="images/mugi-3.svg" class="plan-top">
-        <div class="plan-title">テンプレート</div>
-        <div class="plan-title">¥30,000</div>
-        <div style="text-align: center; margin-top: 8px; font-size: clamp(16px, 4vw, 32px);">
-          <div data-modal="#plan-simple" class="button modal-open">詳しくはこちら</div>
-        </div>
-      </div>
+      <a class="plan" href="menu_studio.html"><img src="images/studio-top.png" class="plan-image"></a>
       <div class="plan">
         <img src="images/anchan.svg" class="plan-top">
         <div class="plan-title">テンプレートCMS</div>
@@ -437,7 +432,7 @@
       </div>
     </div>
     <!-- contact -->
-    <div id="contact" class="area" style="margin-bottom: 24px; margin-top: 64px;">
+    <div id="contact" class="area" style="margin-bottom: 24px; margin-top: -64px; padding-top: 64px;">
       <img src="images/contact2.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
       <img src="images/goma.svg" class="inview-appear is-disappear shake" style="width: 40%; position: absolute; bottom: 0; left: -10%;">
       <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜お問い合わせ〜</p>
