--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -14,49 +14,18 @@
   <div style="position: absolute; top: 0;" id="top"></div>
   <!-- header -->
   <header class="header-color">
-    <div class="logo">MUGIX</div>
-    <button class="hamburger-menu" id="js-hamburger-menu">
-      <span class="hamburger-menu_bar"></span>
-      <span class="hamburger-menu_bar"></span>
-      <span class="hamburger-menu_bar"></span>
-    </button>
-    <nav class="navigation">
-      <div class="navi-container">
-        <div class="mugi">
-          <img src="images/mugi-3.svg" style="height: 80%;">
-        </div>
-        <div style="height: 25%;">
-        
-        </div>
-        <div class="header-border"></div>
-        <div style="height: 20%;">
-          <a href="index.html" class="navigation-main">・MUGIX DESIGN</a>
-          <p class="navigation-sub">ホームページ制作</p>
-        </div>
-        <div class="header-border"></div>
-
-        <ul class="navigation-list" style="height: 10%;">
-          <li><a href="privacy_policy.html" class="navigation-link">プライバシーポリシー</a></li>
-        </ul>
-        <div style="width: 70%; height: 40%; color: white;">
-          <div>
-            お問い合わせはこちらから<br>
-            LINE MUGIX公式アカウント
-          </div>
-          <a href="https://lin.ee/QZJ1BCv">
-            <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" style="height: 10%; margin: 12px 0; border-radius: 24px; display: block;">
-          </a>
-          <img src="https://qr-official.line.me/gs/M_713uwqqm_GW.png?oat_content=qr" style="margin-right: 50%; height: 50%; max-width: 200px; border-radius: 8px;">
-        </div>
-      </div>
-    </nav>
+    <div class="logo">MUGIX DESIGN</div>
   </header>
   <!-- smoke -->
   <div class="smoke-top"></div>
   <div class="smoke-bottom"></div>
   <!-- main -->
   <div class="container">
+    <div class="return">前のページに戻る</div>
     <div style="height: 100px;"></div>
+    <div class="mugi">
+      <img src="images/mugi-3.svg" style="height: 80%;">
+    </div>
     <h1 style="margin-bottom: 50px;">プライバシーポリシー</h1>
     <div class="sentense">
       MUGIX（以下、「当サイト」といいます。）は、当サイト上で取得するユーザーの個人情報の取扱いについて、
