--- a/menu_studio.html
+++ b/menu_studio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ノーコードツールSTUDIOで制作するサイト3プラン。低価格でとてもスピーディです。">
-    <title>STUDIOによる制作プラン</title>
+    <title>STUDIOによるHP制作</title>
     <link rel="icon" href="images/favicon.png">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" type="image/png" href="images/android-touch-icon.png" sizes="192x192">
@@ -12,6 +12,7 @@
 </head>
 <body class="media">
     <div style="position: absolute; top: 0;" id="top"></div>
+    <div class="bg"></div>
 <!-- header -->
     <header class="header-color">
         <div class="logo">MUGIX DESIGN</div>
@@ -26,45 +27,46 @@
         <div class="mugi">
             <img src="images/mugi-3.svg" style="height: 80%;">
         </div>
-        <h1 style="margin-bottom: 50px;">STUDIOによる制作プラン</h1>
+        <h1 style="margin-bottom: 50px;">STUDIOサイト３</h1>
         <img src="images/studio-top.png" style="height: 80%;">
         <h3>
             ノーコードツール「STUDIO」を使ってサイトを制作する3つのプランです<br>
             コードを書く必要がないことで、3つのプラン全てで低価格とスピーディーさを実現しました
         </h3>
-        <h1 style="border-bottom: 4px solid #eb5e30; width: fit-content; margin-top: 64px;">
+        <h2 style="border-bottom: 4px solid #eb5e30; width: fit-content; margin-top: 64px;">
             STUDIOとは？
-        </h1>
+        </h2>
         <div>
+            STUDIOはコードを書くことなくホームページを制作できるシステムです<br>
             ノーコードのホームページ制作ツールは沢山ありますが、私が使った中では「STUDIO」が1番使いやすく、保守性やデザイン性に富んでいます<br>
             用意されているテンプレートもとても良く、サーバーの管理などを気にしなくていいため、
             サイトが完成した後でも手間がかかることはほとんどありません
         </div>
-        <h1 style="border-bottom: 4px solid #eb5e30; width: fit-content; margin-top: 64px;">
+        <h2 style="border-bottom: 4px solid #eb5e30; width: fit-content; margin-top: 64px;">
             ３種類のプラン
-        </h1>
-        <div class="menu-area">
-            <div class="menu">
+        </h2>
+        <div id="menu" class="menu-area">
+            <div class="menu fade-in-right">
                 <h2 style="text-align: center; font-size: clamp(18px, 2em, 32px);">STANDARD</h2>
-                <h2 style="text-align: center; font-size: clamp(18px, 2em, 32px);">¥30,000</h2>
+                <h2 style="text-align: center; font-size: clamp(18px, 2em, 32px); margin-top: 0;">¥30,000</h2>
                 <div>
                     テンプレートを使用して作る低価格でとてもスピーディなプランです<br>
                     低価格なプランですが驚くほどハイクオリティです
                 </div>
                 <a href="#standard" class="button-small">詳しくはこちら</a>
             </div>
-            <div class="menu">
+            <div class="menu fade-in-right">
                 <h2 style="text-align: center; font-size: clamp(18px, 2em, 32px);">CMS</h2>
-                <h2 style="text-align: center; font-size: clamp(18px, 2em, 32px);">¥50,000</h2>
+                <h2 style="text-align: center; font-size: clamp(18px, 2em, 32px); margin-top: 0;">¥50,000</h2>
                 <div>
                     記事の追加や写真、画像の追加などを簡単に行えるサイトをテンプレートを使用して制作します<br>
                     完成後の編集や更新のやり方もしっかりレクチャーします
                 </div>
                 <a href="#cms" class="button-small">詳しくはこちら</a>
             </div>
-            <div class="menu">
+            <div class="menu fade-in-right">
                 <h2 style="text-align: center; font-size: clamp(18px, 2em, 32px);">ORIGINAL</h2>
-                <h2 style="text-align: center; font-size: clamp(18px, 2em, 32px);">¥80,000</h2>
+                <h2 style="text-align: center; font-size: clamp(18px, 2em, 32px); margin-top: 0;">¥80,000</h2>
                 <div>
                     STUDIOを使って一から制作します。テンプレートは使わないのでデザインは自由に<br>
                     どんなサイトにしたい。という思いを実現するプランです
@@ -74,22 +76,22 @@
         </div>
         <div style="height: 200px;"></div>
 <!-- standard --------------------------------------->
-        <div style="text-align: center;">
+        <div class="inview fade-in-left" style="text-align: center;">
             <h1 id="standard" class="plan-title">STANDARD</h1>
             <h3>~スタンダードプラン~</h3>
-            <h1 id="standard" class="plan-title">¥30,000</h1>
+            <h1 class="plan-title">¥30,000</h1>
         </div>
         <div class="status-area">
-            <div class="status" style="background-color: rgb(0, 195, 13);">修正回数<br>2回</div>
-            <div class="status" style="background-color: rgb(253, 22, 22);">レスポンシブ</div>
-            <div class="status" style="background-color: rgb(0, 155, 232);">サイト内SEO</div>
-            <div class="status" style="background-color: rgb(89, 0, 255);">超短納期</div>
-            <div class="status" style="background-color: rgb(0, 176, 150);">ページ数<br>5まで</div>
-            <div class="status" style="background-color: rgb(226, 0, 207);">SNS連携</div>
-            <div class="status" style="background-color: rgb(76, 76, 76);">問い合わせフォーム</div>
-            <div class="status" style="background-color: rgb(229, 126, 0);">画像素材</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(0, 195, 13);">修正回数<br>2回</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(253, 22, 22);">レスポンシブ</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(0, 155, 232);">サイト内SEO</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(89, 0, 255);">超短納期</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(0, 176, 150);">ページ数<br>5まで</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(226, 0, 207);">SNS連携</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(76, 76, 76);">問い合わせフォーム</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(229, 126, 0);">画像素材</div>
         </div>
-        <div class="area">
+        <div class="area fade-in-left inview">
             <p class="sentense">
                 STUDIOの豊富なテンプレートを使って、サイトを制作します<br>
                 テンプレートを見ながらデザインを決めますので、どんなサイトにしようか悩んでる方にオススメです<br>
@@ -98,7 +100,7 @@
                 <a href="https://studio.design/ja/store">https://studio.design/ja/store</a>
             </p>
         </div>
-        <div class="area">
+        <div class="area inview fade-in-left">
             <h3 class="plan-subtitle">サービス内容</h3>
             <p>デザインのご相談</p>
             <p>STUDIOアカウント作成のお手伝い</p>
@@ -106,7 +108,7 @@
             <p>チェック＆修正</p>
             <p>独自ドメインの設定</p>
         </div>
-        <div class="area">
+        <div class="area inview fade-in-left">
             <h3 class="plan-subtitle">別途かかる費用</h3>
             <p>STUDIOの有料のテンプレートを使用する際はそのテンプレート代</p>
             <p>STUDIOの利用料、月額980円。無料のフリープランもありますが
@@ -118,24 +120,24 @@
         </div>
         <div style="height: 200px;"></div>
 <!-- cms --------------------------------------->
-        <div style="text-align: center;">
+        <div class="inview fade-in-left" style="text-align: center;">
             <h1 id="cms" class="plan-title">CMS</h1>
             <h3>~CMSプラン~</h3>
             <h1 id="standard" class="plan-title">¥50,000</h1>
         </div>
         <div class="status-area">
-            <div class="status" style="background-color: rgb(0, 195, 13);">修正回数<br>2回</div>
-            <div class="status" style="background-color: rgb(253, 22, 22);">レスポンシブ</div>
-            <div class="status" style="background-color: rgb(0, 155, 232);">サイト内SEO</div>
-            <div class="status" style="background-color: rgb(89, 0, 255);">超短納期</div>
-            <div class="status" style="background-color: rgb(0, 176, 150);">ページ数<br>7まで</div>
-            <div class="status" style="background-color: rgb(226, 0, 207);">SNS連携</div>
-            <div class="status" style="background-color: rgb(76, 76, 76);">問い合わせフォーム</div>
-            <div class="status" style="background-color: rgb(229, 126, 0);">画像素材</div>
-            <div class="status" style="background-color: rgb(53, 45, 127);">使い方レクチャー</div>
-            <div class="status" style="background-color: rgb(216, 0, 137);">CMS</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(0, 195, 13);">修正回数<br>2回</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(253, 22, 22);">レスポンシブ</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(0, 155, 232);">サイト内SEO</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(89, 0, 255);">超短納期</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(0, 176, 150);">ページ数<br>7まで</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(226, 0, 207);">SNS連携</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(76, 76, 76);">問い合わせフォーム</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(229, 126, 0);">画像素材</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(53, 45, 127);">使い方レクチャー</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(216, 0, 137);">CMS</div>
         </div>
-        <div class="area">
+        <div class="area inview fade-in-left">
             <p class="sentense">
                 STUDIOを使って作るCMSサイトです<br>
                 CMSとはコンテンツ・マネジメント・システムのことで、専門的な知識がなくてもコンテンツの追加、編集、削除が簡単に行えます<br>
@@ -145,7 +147,7 @@
                 <a href="https://studio.design/ja/store">https://studio.design/ja/store</a>
             </p>
         </div>
-        <div class="area">
+        <div class="area inview fade-in-left">
             <h3 class="plan-subtitle">サービス内容</h3>
             <p>デザインのご相談</p>
             <p>STUDIOアカウント作成のお手伝い</p>
@@ -154,7 +156,7 @@
             <p>独自ドメインの設定</p>
             <p>管理方法のレクチャー</p>
         </div>
-        <div class="area">
+        <div class="area inview fade-in-left">
             <h3 class="plan-subtitle">別途かかる費用</h3>
             <p>STUDIOの有料のテンプレートを使用する際はそのテンプレート代</p>
             <p>STUDIOの利用料、月額2480円。無料のフリープランもありますがCMSのコンテンツ数に制限、
@@ -164,32 +166,32 @@
         <div class="area">
         </div>
         <div style="height: 200px;"></div>
-        <!-- original --------------------------------------->
-        <div style="text-align: center;">
+<!-- original --------------------------------------->
+        <div class="inview fade-in-left" style="text-align: center;">
             <h1 id="original" class="plan-title">ORIGINAL</h1>
             <h3>~オリジナルプラン~</h3>
             <h1 id="standard" class="plan-title">¥80,000</h1>
         </div>
         <div class="status-area">
-            <div class="status" style="background-color: rgb(0, 195, 13);">修正回数<br>4回</div>
-            <div class="status" style="background-color: rgb(253, 22, 22);">レスポンシブ</div>
-            <div class="status" style="background-color: rgb(0, 155, 232);">サイト内SEO</div>
-            <div class="status" style="background-color: rgb(89, 0, 255);">短納期</div>
-            <div class="status" style="background-color: rgb(0, 176, 150);">ページ数<br>7まで</div>
-            <div class="status" style="background-color: rgb(226, 0, 207);">SNS連携</div>
-            <div class="status" style="background-color: rgb(76, 76, 76);">問い合わせフォーム</div>
-            <div class="status" style="background-color: rgb(229, 126, 0);">画像素材</div>
-            <div class="status" style="background-color: rgb(53, 45, 127);">使い方レクチャー</div>
-            <div class="status" style="background-color: rgb(216, 0, 137);">CMS</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(0, 195, 13);">修正回数<br>4回</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(253, 22, 22);">レスポンシブ</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(0, 155, 232);">サイト内SEO</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(89, 0, 255);">短納期</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(0, 176, 150);">ページ数<br>7まで</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(226, 0, 207);">SNS連携</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(76, 76, 76);">問い合わせフォーム</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(229, 126, 0);">画像素材</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(53, 45, 127);">使い方レクチャー</div>
+            <div class="status fade-in-anywhere" style="background-color: rgb(216, 0, 137);">CMS</div>
         </div>
-        <div class="area">
+        <div class="area inview fade-in-left">
             <p class="sentense">
                 テンプレートを使わず、一からサイトを制作します<br>
                 オリジナルのデザインとなりますので、ご相談にてイメージを形にしていきましょう<br>
                 CMSの機能を持たせることも可能です<br>
             </p>
         </div>
-        <div class="area">
+        <div class="area inview fade-in-left">
             <h3 class="plan-subtitle">サービス内容</h3>
             <p>デザインのご相談</p>
             <p>STUDIOアカウント作成のお手伝い</p>
@@ -198,7 +200,7 @@
             <p>独自ドメインの設定</p>
             <p>管理方法のレクチャー</p>
         </div>
-        <div class="area">
+        <div class="area inview fade-in-left">
             <h3 class="plan-subtitle">別途かかる費用</h3>
             <p>STUDIOの利用料、月額980円あるいは月額2480円。無料のフリープランもありますがCMSのコンテンツ数に制限、
                 「◯◯◯.com」のような独自のドメインは使えず、画面の端にSTUDIOのバナーが入ります</p>
@@ -206,7 +208,7 @@
         </div>
         <div style="height: 200px;"></div>
         <div class="area" style="margin-bottom: 100px;">
-            <h1 class="plan-title">お問い合わせ</h1>
+            <h2 style="border-bottom: 4px solid #eb5e30; width: fit-content; margin-top: 64px;">お問い合わせ</h2>    
             お問い合わせはLINEのMUGIX公式アカウントからメッセージを送って下さい<br>
             お見積もりや質問など、お気軽にご相談ください
             <img src="https://qr-official.line.me/gs/M_713uwqqm_GW.png?oat_content=qr" style="margin: 24px 0 0 8px; width: 50%; max-width: 200px; border-radius: 8px;">
@@ -220,6 +222,7 @@
     </footer>
     <!-- js -->
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="js/jquery.inview.min.js"></script>
     <script src="js/mugix.js"></script>
 </body>
 </html>
