--- a/index.html
+++ b/index.html
@@ -110,16 +110,29 @@
       </div>
       <div class="mugi-selif" style="width: 30%;"></div>
     </div>
-    <div class="area" id="background-color-on" style="margin-bottom: 200px;">
+    <div class="area" id="background-color-on" style="margin-bottom: 50px;">
       <div class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 1.8; ">
-        このサイトはポップで楽しめるサイトをコンセプトに制作しています<br>
+        このサイトはポップで楽しめるサイトをコンセプトに制作しています<br><br>
         制作のご案内やお問い合わせと同時に、実例の見本にもなっております。お客様のプランのご参考にいかがでしょうか？<br>
         もちろん落ち着いた雰囲気の大人なデザインなども得意です<br>
-        ホームページの制作を検討しているなら、ぜひご相談ください<br>
+        お気軽にご相談くださいませ<br>
         <div style="text-align: right; margin: 8px 0;"><a href="#contact" class="button">お問い合わせ</a></div>
         なお、クリックのできるところがいくつかございます<br>
         どうぞごゆっくりお楽しみ下さい
       </div>
+      <div class="bg-palette-button" style="margin-top: 200px;">
+        <img src="images/arrow.svg" class="bg-arrow">
+      </div>
+      <div class="bg-text">背景パレット</div>
+      <div class="bg-palette">
+        <div id="bg-1" class="bg-picker media-border" style="background-image: url('images/bg-water.svg');"></div>
+        <div id="bg-2" class="bg-picker media-border" style="background-image: url('images/bg-green.svg');"></div>
+        <div id="bg-3" class="bg-picker media-border" style="background-image: url('images/bg-pink.svg');"></div>
+        <div id="bg-4" class="bg-picker media-border" style="background-image: url('images/bg-blue.svg');"></div>
+        <div id="bg-5" class="bg-picker media-border" style="background-image: url('images/bg-salmon.svg');"></div>
+        <div id="bg-6" class="bg-picker media-border" style="background-image: url('images/bg-yellow.svg');"></div>
+      </div>
+      <!--
       <img src="images/bg-title.svg" class="palette-re" style="animation: rotate-anim 15s linear infinite reverse; pointer-events: none;">
       <div class="palette" style="animation: rotate-anim 20s linear infinite;">
         <div id="bg-1" class="bg-button media-border" style="background-image: url('images/bg-water.svg'); transform: translate(-50%, 80%);"></div>
@@ -129,6 +142,7 @@
         <div id="bg-5" class="bg-button media-border" style="background-image: url('images/bg-salmon.svg'); transform: translate(-160%, -115%);"></div>
         <div id="bg-6" class="bg-button media-border" style="background-image: url('images/bg-yellow.svg'); transform: translate(-160%, 15%);"></div>
       </div>
+      -->
     </div>
     <div class="news">
       <div style="margin-left: 24px; font-size: 1.2em; color: #eb5e30;">最新情報</div>
@@ -137,10 +151,12 @@
         「テンプレート」「テンプレートCMS」「オリジナル」の3種類のプランでより分かりやすくしました
       </div>
     </div>
+    <div style="position: relative; height: 50px;">
+      <img src="images/rakko.svg" class="inview-rakko" style="width: 50%; position: absolute; top: 0; left: -50%;">
+    </div>
     <!-- about_us -->
     <div id="about" class="area" style="margin-bottom: 24px; margin-top: -64px; padding-top: 64px;">
       <img src="images/about-us3.svg" class="is-disappear subtitle" id="about-us">
-      <img src="images/rakko.svg" class="inview-rakko" style="width: 50%; position: absolute; bottom: 0; left: -50%;">
       <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜ムギックスについて〜</p>
     </div>
     <img src="images/bee.svg" id="bee" style="width: 25%; position: absolute; z-index: 10; top: -300px;">
@@ -233,7 +249,7 @@
         </div>
       </div>
     </div>
-    <!-- create -->
+<!-- create -->
     <div class="area" style="margin-bottom: 48px;">
       <div class="menu-title inview fade-in-bottom" style="margin-bottom: 24px;">
         STEP 2
@@ -275,7 +291,7 @@
         </div>
       </div>
     </div>
-    <!-- completed -->
+<!-- completed -->
     <div class="area" style="margin-bottom: 48px;">
       <div class="menu-title inview fade-in-bottom" style="margin-bottom: 24px;">
         STEP 3
@@ -302,7 +318,7 @@
         </div>
       </div>
     </div>
-    <!-- prices -->
+<!-- prices -->
     <div id="prices" class="area" style="margin-bottom: 24px; margin-top: -64px; padding-top: 64px;">
       <img src="images/shoebill.svg" class="inview-appear is-disappear" style="position: absolute; bottom: 0; right: 20%; width: 15%;">
       <img src="images/menu2.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
@@ -319,6 +335,14 @@
     </div>
     <div class="plan-slider">
       <a class="plan" href="menu_studio.html"><img src="images/studio-top.png" class="plan-image"></a>
+      <div class="plan" style="background-color: beige;">
+        <img src="images/mugi-3.svg" class="plan-top">
+        <div class="plan-title">STUDIOサイト</div>
+        <div class="plan-title">3プラン</div>
+        <div style="text-align: center; margin-top: 8px; font-size: clamp(16px, 4vw, 32px);">
+          <a href="menu_studio.html"><div class="button">詳しくはこちら</div></a>
+        </div>
+      </div>
       <div class="plan">
         <img src="images/anchan.svg" class="plan-top">
         <div class="plan-title">テンプレートCMS</div>
@@ -440,7 +464,7 @@
     <div class="area" style="margin-bottom: 48px;">
       <div class="text-hor inview fade-in-bottom" style="margin: 0 25% 0 4%; line-height: 2;">
         お問い合わせはLINEのMUGIX公式アカウントからメッセージを送って下さい<br>
-        お知らせや告知などの不必要なメッセージは送りませんので<br>
+        お知らせや告知などの不必要なメッセージは一切送りませんので、
         お見積もりや質問など、お気軽にご相談ください<br><br>
         以下のQRコードを読み込むか<br>スマートフォンだと「友だち追加」ボタンからでも追加できます
       </div>
@@ -450,7 +474,7 @@
     </div>
     <div class="area">
       <a href="https://lin.ee/QZJ1BCv">
-        <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" style="height: 50px; margin-left: 10%; border-radius: 24px;">
+        <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" style="height: 30px; margin-left: 10%; border-radius: 24px;">
       </a>
     </div>
     <div class="area" style="margin-bottom: 64px;">
