--- a/menu_studio.html
+++ b/menu_studio.html
@@ -15,7 +15,7 @@
     <div class="bg"></div>
 <!-- header -->
     <header class="header-color">
-        <div class="logo">MUGIX DESIGN</div>
+        <a href="index.html" style="text-decoration: none; color: inherit;"><div class="logo">MUGIX DESIGN</div></a>
     </header>
 <!-- smoke -->
     <div class="smoke-top"></div>
@@ -25,10 +25,10 @@
         <div class="return">前のページに戻る</div>
         <div style="height: 100px;"></div>
         <div class="mugi">
-            <img src="images/mugi-3.svg" style="height: 80%;">
+            <img src="images/mugi-3.svg" style="width: 80%;">
         </div>
-        <h1 style="margin-bottom: 50px;">STUDIOサイト３</h1>
-        <img src="images/studio-top.png" style="height: 80%;">
+        <h1 style="margin-bottom: 50px;">STUDIOサイト-3PLAN</h1>
+        <img src="images/mugi-3.svg" style="width: 100%;">
         <h3>
             ノーコードツール「STUDIO」を使ってサイトを制作する3つのプランです<br>
             コードを書く必要がないことで、3つのプラン全てで低価格とスピーディーさを実現しました
@@ -36,7 +36,7 @@
         <h2 style="border-bottom: 4px solid #eb5e30; width: fit-content; margin-top: 64px;">
             STUDIOとは？
         </h2>
-        <div>
+        <div class="inview fade-in-left">
             STUDIOはコードを書くことなくホームページを制作できるシステムです<br>
             ノーコードのホームページ制作ツールは沢山ありますが、私が使った中では「STUDIO」が1番使いやすく、保守性やデザイン性に富んでいます<br>
             用意されているテンプレートもとても良く、サーバーの管理などを気にしなくていいため、
@@ -213,7 +213,7 @@
             お見積もりや質問など、お気軽にご相談ください
             <img src="https://qr-official.line.me/gs/M_713uwqqm_GW.png?oat_content=qr" style="margin: 24px 0 0 8px; width: 50%; max-width: 200px; border-radius: 8px;">
             <a href="https://lin.ee/QZJ1BCv">
-            <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" style="height: 50px; margin-left: 10%; border-radius: 24px;">
+            <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" style="height: 30px; margin-left: 10%; border-radius: 24px;">
             </a>
         </div>
     </div>
