--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css">
   <link rel="stylesheet" type="text/css" href="css/design.css">
+  <!-- prelord -->
+  <link rel="prelord" href="images/selif.svg" as="image">
 </head>
 <body class="media">
   <div style="position: absolute; top: 0;" id="top"></div>
@@ -108,7 +110,7 @@
         <img src="images/mugi-3.svg" class="shake" id="mugi-button">
         <img src="images/push.svg" class="push">
       </div>
-      <div class="mugi-selif" style="width: 30%;"></div>
+      <div class="mugi-selif"></div>
     </div>
     <div class="area" id="background-color-on" style="margin-bottom: 50px;">
       <div class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 1.8; ">
@@ -132,17 +134,6 @@
         <div id="bg-5" class="bg-picker media-border" style="background-image: url('images/bg-salmon.svg');"></div>
         <div id="bg-6" class="bg-picker media-border" style="background-image: url('images/bg-yellow.svg');"></div>
       </div>
-      <!--
-      <img src="images/bg-title.svg" class="palette-re" style="animation: rotate-anim 15s linear infinite reverse; pointer-events: none;">
-      <div class="palette" style="animation: rotate-anim 20s linear infinite;">
-        <div id="bg-1" class="bg-button media-border" style="background-image: url('images/bg-water.svg'); transform: translate(-50%, 80%);"></div>
-        <div id="bg-2" class="bg-button media-border" style="background-image: url('images/bg-green.svg'); transform: translate(-50%, -180%);"></div>
-        <div id="bg-3" class="bg-button media-border" style="background-image: url('images/bg-pink.svg'); transform: translate(60%, 15%);"></div>
-        <div id="bg-4" class="bg-button media-border" style="background-image: url('images/bg-blue.svg'); transform: translate(60%, -115%);"></div>
-        <div id="bg-5" class="bg-button media-border" style="background-image: url('images/bg-salmon.svg'); transform: translate(-160%, -115%);"></div>
-        <div id="bg-6" class="bg-button media-border" style="background-image: url('images/bg-yellow.svg'); transform: translate(-160%, 15%);"></div>
-      </div>
-      -->
     </div>
     <div class="news">
       <div style="margin-left: 24px; font-size: 1.2em; color: #eb5e30;">最新情報</div>
